[package]
name = "midi-cw-keyer"
version = "0.1.0"
authors = ["Johannes Frankenau <johannes@frankenau.net>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
eyre = { version = "0.6", default-features = false, features = ["auto-install"] }
lexopt = "0.3"
midir = "0.9"
ringbuffer = "0.15"
rodio = { version = "0.17", default-features = false }
tokio = { version = "1.35", features = ["macros", "rt", "sync", "time"] }
wmidi = "4.0"
